removed akka libraries